--- a/AUTHORS
+++ b/AUTHORS
@@ -2363,6 +2363,10 @@ Fred Hoekstra		<fred.hoekstra [AT] philips.com> {
 	DEC DNA Routing support
 }
 
+Ankur Aggarwal		<ankur [AT] in.athenasemi.com> {
+	IEEE 802.11 QoS decoding
+}
+
 And assorted fixes and enhancements by the people listed above
 and by:
 
@@ -2475,6 +2479,7 @@ Dominik Kuhlen		<dkuhlen [AT] gmx.net>
 Karl Knoebl		<karl.knoebl [AT] siemens.com>
 Maria-Luiza Crivat	<luizacri [AT] gmail.com>
 Brice Augustin		<bricecotte [AT] gmail.com>
+
 
 Alain Magloire <alainm[AT]rcsm.ece.mcgill.ca> was kind enough to
 give his permission to use his version of snprintf.c.
