--- a/AUTHORS
+++ b/AUTHORS
@@ -2481,6 +2481,7 @@ Dominik Kuhlen		<dkuhlen [AT] gmx.net>
 Karl Knoebl		<karl.knoebl [AT] siemens.com>
 Maria-Luiza Crivat	<luizacri [AT] gmail.com>
 Brice Augustin		<bricecotte [AT] gmail.com>
+Matt Thornton		<MATT_THORNTON [AT] appsig.com>
 
 
 Alain Magloire <alainm[AT]rcsm.ece.mcgill.ca> was kind enough to
