--- a/NEWS
+++ b/NEWS
@@ -61,6 +61,9 @@ Ethereal 0.10.13 has been released.
      o The NCP dissector was susceptible to an infinite loop. Versions
        affected: 0.9.7 to 0.10.12.
 
+     o The ACSE dissector was susceptible to infinite recursion. Versions
+       affected: 0.10.12.
+
      o iDEFENSE found a buffer overflow in the SRVLOC dissector. Versions
        affected: 0.10.0 to 0.10.12.
 
@@ -110,23 +113,22 @@ Ethereal 0.10.13 has been released.
 
   Updated Protocol Support
 
-   802.11 Radiotap, A11, AARP, ACSE, ACtrace, AFP, AFS, AgentX, AIM,
-   AJP13, ALCAP, AMR, ANSI A, ANSI IS-637-A, ANSI IS-683-A, ANSI IS-801,
-   ANSI MAP, AOE, AppleTalk, Armagetronad, ARP, ASAP, ASN.1, BACapp,
-   BER, BGP, BitTorrent, BOOTP, CAMEL, CLNP, CMIP, CMP, CMS, COPS, CRMF,
-   CSM_ENCAPS, DAAP, DCERPC (ATSVC, DCE_DFS, FLDB, INITSHUTDOWN, LSA,
-   NETLOGON, NT, SAMR, SPOOLSS, WINREG), DCM, DCOM, DHCP Failover,
-   DIAMETER, ENRP, ESS, FC, FCCT, FCDNS, FCELS, FCFCS, FCFZS, FCP,
-   FCSWILS, FTAM, GIOP, GPRS LLC, GSM, GTP, H1, H.225, H.235, H.245,
-   H.248, H.261, H.263, H.450, HSRP, HTTP, IAX2, IEEE 802.11, IEEE 802.3,
-   IEEE 802.3 Slow protocols, IP, IP/IEEE1394, IRC, IrDA, ISAKMP, iSCSI,
-   ISIS, ISUP, Jabber, JFIF, Juniper, JXTA, K12, Kerberos, LDAP, LDP, LLC,
-   LPD, MAP_DialoguePDU, MDSHDR, Media, MEGACO, MGCP, MIME multipart,
-   MMS, MOUNT, MQ, MSMMS, NBNS, NCP, NDMP, NS_CERT_EXTS, OCSP, OPSI,
-   OSPF, PARLAY, PER, PKINIT, PKIX, PN-RT, PPP, PRES, PTP, RADIUS,
-   RDT, RPC, RSVP, RTCP, RTnet, RTSP, SCCP, SCSI, SCTP, SES, sFlow,
-   SIGCOMP, SIP, SliMP3, SMB, SMPP, SMRSE, SNA, SNMP, SPNEGO, SRVLOC,
-   STUN, T.38, TCAP, TCP, Text, TPKT, UMA, WBXML, WLANCERTEXTN, WSP,
+   802.11 Radiotap, A11, AARP, ACSE, ACtrace, AFP, AFS, AgentX, AIM, AJP13,
+   ALCAP, AMR, ANSI A, ANSI IS-637-A, ANSI IS-683-A, ANSI IS-801, ANSI MAP,
+   AOE, AppleTalk, Armagetronad, ARP, ASAP, ASN.1, BACapp, BER, BGP,
+   BitTorrent, BOOTP, CAMEL, CLNP, CMIP, CMP, CMS, COPS, CRMF, CSM_ENCAPS,
+   DAAP, DCERPC (ATSVC, DCE_DFS, FLDB, INITSHUTDOWN, LSA, NETLOGON, NT, SAMR,
+   SPOOLSS, WINREG), DCM, DCOM, DHCP Failover, DIAMETER, ENRP, ESS, FC, FCCT,
+   FCDNS, FCELS, FCFCS, FCFZS, FCP, FCSWILS, FTAM, GIOP, GPRS LLC, GSM, GTP,
+   H1, H.225, H.235, H.245, H.248, H.261, H.263, H.450, HSRP, HTTP, IAX2,
+   IEEE 802.11, IEEE 802.3, IEEE 802.3 Slow protocols, IP, IP/IEEE1394, IRC,
+   IrDA, ISAKMP, iSCSI, ISIS, ISUP, Jabber, JFIF, Juniper, JXTA, K12,
+   Kerberos, LDAP, LDP, LLC, LPD, MAP_DialoguePDU, MDSHDR, Media, MEGACO,
+   MGCP, MIME multipart, MMS, MOUNT, MQ, MSMMS, NBNS, NCP, NDMP,
+   NS_CERT_EXTS, OCSP, OPSI, OSPF, PARLAY, PER, PKINIT, PKIX, PN-RT, PPP,
+   PRES, PTP, RADIUS, RDT, RPC, RSVP, RTCP, RTnet, RTSP, SCCP, SCSI, SCTP,
+   SES, sFlow, SIGCOMP, SIP, SliMP3, SMB, SMPP, SMRSE, SNA, SNMP, SPNEGO,
+   SRVLOC, STUN, T.38, TCAP, TCP, Text, TPKT, UMA, WBXML, WLANCERTEXTN, WSP,
    X11, X.25, X.509, XML, YMSG
 
   New and Updated Capture File Support
