Copy over more stuff from the trunk:
r16257:

 don't show the "stopping currently running capture" dialog, as the packet list seems to have problems updating the screen, so some ugly artefacts remain on the screen.
 
 after I've fixed a bug in the Win32 capture stop mechanism some days(?) before (which speeds up that stopping a lot), this dialog isn't really needed

16258:

 Don't pass -1 as a fragment length to fragment_add_check().  This keeps
 us from crashing and it keeps Valgrind from taunting us with
 
 ==29091== Warning: silly arg (-1) to malloc()
 
 Fixes bug 537.


Update the release notes and NEWS.


svn path=/releases/ethereal-0.10.13/; revision=16259

--- a/NEWS
+++ b/NEWS
@@ -64,6 +64,8 @@ Ethereal 0.10.13 has been released.
      o The ACSE dissector was susceptible to infinite recursion. Versions
        affected: 0.10.12.
 
+     o The CLNP dissector could crash. Versions affected: 0.9.11 to 0.10.12.
+
      o iDEFENSE found a buffer overflow in the SRVLOC dissector. Versions
        affected: 0.10.0 to 0.10.12.
 
